--- a/sample/index.html
+++ b/sample/index.html
@@ -168,6 +168,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-12 d-flex align-items-stretch">
+                    <div class="card full-width">
+                        <div class="card-body">
+                            <h4>
+                                Withdraw fund
+                            </h4>
+
+                            <div id="encrypt-message-form">
+                                <input class="form-control" type="text" placeholder="value to withdraw"
+                                    id="withdrawInput" />
+
+                                <button class="btn btn-primary btn-lg btn-block mb-3" id="withdrawButton" disabled>
+                                    Withdraw
+                                </button>
+                            </div>
+                            <p class="info-text alert alert-warning">
+                                withdraw result:
+                                <span id="withdrawResult"></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
