add logic for check chainId

--- a/sample/index.html
+++ b/sample/index.html
@@ -59,6 +59,9 @@
                             <p class="info-text alert alert-secondary">
                                 publickey: <span id="publickeyResult"></span>
                             </p>
+                            <p class="error-message alert alert-secondary hide-item" id="errorMessageBox">
+                                error: <span id="errorMessage"></span>
+                            </p>
                         </div>
                     </div>
                 </div>
